Fix card stretch bug

--- a/src/components/SetGame/setgame.css
+++ b/src/components/SetGame/setgame.css
@@ -20,17 +20,17 @@
         font-size: 16px;
         color: #333;
         padding: 10px;
-        flex: 0 0 25%; /* 20% of the container */
+        flex: 0 0 25%;
     }
 
     .game-grid-container {
-        flex: 0 1 50%; /* 80% of the container */
+        flex: 0 1 50%; 
         padding-top: 20px;
         max-height: 100%;
     }
 
     .fill-space {
-        flex: 0 0 25%; /* 20% of the container */
+        flex: 0 0 25%;
     }
 
     .game-grid {
@@ -45,21 +45,21 @@
 /* mobile version */
 @media (max-width: 768px) {
     .setgame {
-        padding: 20px;
+        /* padding: 20px; */
         display: flex;
         flex-direction: column;
-        width: 100%;
-        height: 100%;
+        /* width: 100%; */
+        /* height: 100%; */
     }
     
     .info {
         font-size: 16px;
         color: #333;
         padding: 10px;
-        flex: 0 0 20%; /* 20% of the container */
+        flex: 0 0 10%; /* 20% of the container */
     }
     .game-grid-container {
-        flex: 0 0 60%; /* 80% of the container */
+        flex: 0 0 50%; /* 80% of the container */
         padding-top: 20px;
     }
 
